# autoversion

./: .gitignore  pyproject.toml  setup.cfg  setup.py
src/autovers/: _version.py
src/autovers.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
