# See https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
# And this great example : https://github.com/Kinto/kinto/blob/master/setup.cfg
[metadata]
name = autovers
description = Generate badges for tools that do not provide one.
license = MIT
keywords = commandline cli generate badge shield svg flake8 pytest test coverage markdown
author = John Smith <John.Smith@NotReal.com>
maintainer = John Smith <John.Smith@NotReal.com>
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python
    Programming Language :: Python :: 3.8

[options]
# one day these will be able to come from requirement files, see https://github.com/pypa/setuptools/issues/1951. But will it be better ?
setup_requires =
    setuptools_scm
install_requires =
    click>8.0
    requests
tests_require =
    pytest
zip_safe = False
package_dir=
    =src
packages = find:

[options.packages.find]
where=src

# -------------- Packaging -----------
[options.entry_points]

[tool:pytest]
testpaths = genbadge/tests/
addopts =
    --verbose
    --doctest-modules
    --ignore-glob='**/_*.py'

filterwarnings =
    always
