# See https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
# And this great example : https://github.com/Kinto/kinto/blob/master/setup.cfg
[metadata]
name = autovers
description = A template which automatically generates version numbers on build
license = MIT
keywords = commandline cli generate badge shield svg flake8 pytest test coverage markdown
author = Jonathan Olsten <jonathan.olsten@gmail.com>
maintainer = Jonathan Olsten <jonathan.olsten@gmail.com>
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
setup_requires =
    setuptools_scm
install_requires =
    click>8.0
    requests
tests_require =
    pytest
zip_safe = False
package_dir=
    =src
packages = find:

[options.packages.find]
where=src
